--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "theme-ui": "^0.3.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -25,6 +26,14 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": ["**/*.js?(x)"],
+        "rules": {
+          "import/no-anonymous-default-export": 0
+        }
+      }
     ]
   },
   "browserslist": {
