--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "rdndmb-html5-to-touch": "^7.0.0-alpha.1",
     "react": "^17.0.1",
     "react-dnd": "^14.0.1",
     "react-dnd-html5-backend": "^14.0.0",
+    "react-dnd-multi-backend": "^7.0.0-alpha.1",
+    "react-dnd-touch-backend": "^14.0.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "theme-ui": "^0.3.5",
@@ -29,7 +32,9 @@
     ],
     "overrides": [
       {
-        "files": ["**/*.js?(x)"],
+        "files": [
+          "**/*.js?(x)"
+        ],
         "rules": {
           "import/no-anonymous-default-export": 0
         }
