--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dnd-touch-backend": "^14.0.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "react-use-dimensions": "^1.2.1",
     "theme-ui": "^0.3.5",
     "web-vitals": "^1.0.1"
   },
