--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "react-use-dimensions": "^1.2.1",
     "theme-ui": "^0.3.5",
+    "typeface-nunito": "^1.1.13",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
