--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "framer-motion": "^3.10.5",
     "rdndmb-html5-to-touch": "^7.0.0-alpha.1",
     "react": "^17.0.1",
     "react-dnd": "^14.0.1",
