--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dnd-multi-backend": "^7.0.0-alpha.1",
     "react-dnd-touch-backend": "^14.0.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-use-dimensions": "^1.2.1",
     "theme-ui": "^0.3.5",
@@ -39,7 +40,8 @@
           "**/*.js?(x)"
         ],
         "rules": {
-          "import/no-anonymous-default-export": 0
+          "import/no-anonymous-default-export": 0,
+          "react/jsx-pascal-case": 0
         }
       }
     ]
