--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ctrl/tinycolor": "^3.4.0",
     "@iconify/icons-ic": "^1.1.3",
     "@iconify/react": "^1.1.4",
     "@testing-library/jest-dom": "^5.11.4",
