--- a/package.json
+++ b/package.json
@@ -1,29 +1,42 @@
 {
-  "name": "cats-in-cups",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@ctrl/tinycolor": "^3.4.0",
-    "@iconify/icons-ic": "^1.1.3",
+    "@iconify/icons-ic": "^1.1.4",
     "@iconify/react": "^1.1.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "framer-motion": "^3.10.5",
+    "framer-motion": "^4.1.17",
     "localforage": "^1.9.0",
     "rdndmb-html5-to-touch": "^7.0.0-alpha.1",
-    "react": "^17.0.1",
-    "react-dnd": "^14.0.1",
-    "react-dnd-html5-backend": "^14.0.0",
-    "react-dnd-multi-backend": "^7.0.0-alpha.1",
+    "react": "^17.0.2",
+    "react-dnd": "^14.0.2",
     "react-dnd-touch-backend": "^14.0.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-use-dimensions": "^1.2.1",
-    "theme-ui": "^0.3.5",
+    "theme-ui": "^0.8.4",
     "typeface-nunito": "^1.1.13",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^0.2.4",
+    "workbox-background-sync": "^5.1.3",
+    "workbox-broadcast-update": "^5.1.3",
+    "workbox-cacheable-response": "^5.1.3",
+    "workbox-core": "^5.1.3",
+    "workbox-expiration": "^5.1.3",
+    "workbox-google-analytics": "^5.1.3",
+    "workbox-navigation-preload": "^5.1.3",
+    "workbox-precaching": "^5.1.3",
+    "workbox-range-requests": "^5.1.3",
+    "workbox-routing": "^5.1.3",
+    "workbox-strategies": "^5.1.3",
+    "workbox-streams": "^5.1.3"
+  },
+  "resolutions": {
+    "babel-loader": "8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,11 +54,10 @@
     "overrides": [
       {
         "files": [
-          "**/*.js?(x)"
+          "**/*.stories.*"
         ],
         "rules": {
-          "import/no-anonymous-default-export": 0,
-          "react/jsx-pascal-case": 0
+          "import/no-anonymous-default-export": "off"
         }
       }
     ]
@@ -63,11 +75,11 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.1.21",
-    "@storybook/addon-essentials": "^6.1.21",
-    "@storybook/addon-links": "^6.1.21",
-    "@storybook/node-logger": "^6.1.21",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/node-logger": "^6.2.9",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.1.21"
+    "@storybook/react": "^6.2.9"
   }
 }
