--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dnd": "^14.0.2",
     "react-dnd-touch-backend": "^14.0.0",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-use-dimensions": "^1.2.1",
