--- a/package.json
+++ b/package.json
@@ -60,6 +60,12 @@
         "rules": {
           "import/no-anonymous-default-export": "off"
         }
+      },
+      {
+        "files": ["**/*.js"],
+        "rules": {
+          "react/jsx-pascal-case": "off"
+        }
       }
     ]
   },
