--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
         }
       },
       {
-        "files": ["**/*.js"],
+        "files": [
+          "**/*.js"
+        ],
         "rules": {
           "react/jsx-pascal-case": "off"
         }
